templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workout-api-service
spec:
  type: ClusterIP
  selector:
    app: workout-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
